{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "747e9ecf-31cf-4963-a826-cd3e066980f0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "1d646a87-bee8-4a42-8139-b62c0daf0947",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "562758a7-6111-4381-bd66-113092c4ea74",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JerkBait",
                    "type": "Button",
                    "id": "17dde90e-3b81-4d2d-a83e-7d3a7b1fa4db",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action0",
                    "type": "Button",
                    "id": "60805592-3b12-4549-9a1d-66e5b0e53ce7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action1",
                    "type": "Button",
                    "id": "69b68153-44ee-41fe-9a31-7b576f0c7bf1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reeling",
                    "type": "Button",
                    "id": "0a0a316c-be20-4dd2-9561-1d1a70bf3298",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "4b2945ad-866f-479f-a81a-b530976598a2",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ControlBoat",
                    "type": "Value",
                    "id": "03a0d180-db3a-4626-9c14-62c715a05a32",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "8f5eee3a-7c05-43f2-8a11-28fab006cfd4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "db9663d4-bb91-4d1b-a808-0da9b529b924",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "072b3d2e-99a3-473a-9b91-d4c8eaab1961",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4f1ad69c-f265-448e-9ae9-ad958cfa34d5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "06c8d7db-14fa-422a-8444-1cf25da37720",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8f7c4c27-bcc8-4d11-80ad-039bad4ce2aa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "56afe49a-671a-4719-aa3c-462f3d86db59",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00d0aa15-9f5c-4092-aa2e-dba01cf7d662",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";PC",
                    "action": "JerkBait",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ffba892-427f-4add-977e-a2cfb794c39b",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";PC",
                    "action": "JerkBait",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "701b3a12-a03c-4f31-8c48-ca0858fd4d38",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";PC",
                    "action": "JerkBait",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e614673a-a7d6-4d7c-b13f-17094bb9e639",
                    "path": "<Keyboard>/d",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";PC",
                    "action": "JerkBait",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "331aacf1-287c-4795-a4e9-f1b6c623c727",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Action0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc88cd7f-7b7e-4ca3-b9b2-23c60af1934a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3cf6e82-ab72-488d-9818-1cefcd85446b",
                    "path": "<Keyboard>/d",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Reeling",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99bf282d-681b-4844-874b-47bd86492749",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "7c4e1909-cf04-496e-bf88-0c2f31ff9b20",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlBoat",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Positive",
                    "id": "03c138e3-2806-4b20-8ff8-63b9b2c4b8f4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "5189fc69-d8b8-47f1-8906-6a07df621a82",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fc061be7-b44e-4c5d-a80e-f102b06233d4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}